--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
   <link rel="stylesheet" href="stylesheet.css">
 
-  <title>TUNING NATION
+  <title>TUNING NATION</title>
     
-</header>
-<body>
-  WELCOME TO TUNER CENTER
+</head>
+<header>
+WELCOME TO TUNER CENTER
