--- a/index.html
+++ b/index.html
@@ -8,3 +8,9 @@
 </head>
 <header>
 WELCOME TO TUNER CENTER
+
+<div id="wrapperHeader">
+  <div id="header">
+    <img src="https://www.experiencedays.co.uk/images/Toyota-Supra-driving-experience-in-cotswold-big-1920x1080-resize.JPG">
+  </div>
+</div>
