--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@ WELCOME TO TUNER CENTER
 
 <div id="wrapperHeader">
   <div id="header">
-    <img src="https://www.experiencedays.co.uk/images/Toyota-Supra-driving-experience-in-cotswold-big-1920x1080-resize.JPG">
+    <img src="https://www.experiencedays.co.uk/images/Toyota-Supra-driving-experience-in-cotswold-big-1920x1080-resize.JPG" alt="logo" \>
   </div>
 </div>
