--- a/index.html
+++ b/index.html
@@ -14,3 +14,6 @@ WELCOME TO TUNER CENTER
     <img src="https://www.experiencedays.co.uk/images/Toyota-Supra-driving-experience-in-cotswold-big-1920x1080-resize.JPG" alt="logo" \>
   </div>
 </div>
+  
+  </body>
+  <a href="inlinesix.github.io">Explore Inline Six</a>
